TEST_PROGRAMS/INVALID/eric_ditomasso/floatformat.min
# test float formatting rules
var x: float;

x = 00.;
